RC 4
====
- Updated AllTypes strategy to support multiple registrations from a single set of types.

- Collection handlers from parent container for GetAssignableHandlers.

- Added ability to change invocation target to DefaultProxyFactory.

- Fixed bug with ComponentRegistration.Instance in which the instance type was not assigned as the ComponentModel implementation.

- Replaced AllTypesOf<T> syntax with AllTypes.Of<T> so a non-generic version can be consistently provided.  

- Added generic AddFacility methods to kernel.

- Added generalized configuration support to ComponentRegistration.

- Added IWindsorInstaller interface to enhance Windsor component installation.

- Added AllTypesOf registration stratgey to simplify custom registration
  scenarios.

- Added IRegistration interface to allow alternate registration mechanisms.

- Fixed CORE-16 (Should be Facilities) 
 "The FactorySupportFacility does not create proxies if interceptors are present"

- Added support for list service overrides using the fluent registration interface.
  Added support for specifying configuration parameters using the fluent interface to allow any complex
  registration scenarios.

- Restructured the registration fluent interface to be a little more readable,
  better support component registrations and prevent errors resulting from 
  forgetting to call ComponentRegistration.Register

- Fixed Facilities-97
  "EventWiring Facility fails to create some components"
  
- Added support for non-generic usage of fluent-interface.  Needed for dynamic registrations scenarios (Binsor)
  Automatically register the component between consecutive AddComponentEx (Saves a few strokes).

- Initial version of MicroKernel/Windsor fluent interface IOC-99

- Applied patch from Jacob Lewallen improving the locking performance in the DefaultNamingSubsystem under high load.

- Applied Philippe Tremblay's patch fixing IOC-94 
  "Copy LifeStyle from generic interface"
