@@ -1,5 +1,8 @@
 RC 4
 ====
+
+- Updated AllTypes strategy to support types based on generic type definitions.
+
 - Updated AllTypes strategy to support multiple registrations from a single set of types.
 
 - Collection handlers from parent container for GetAssignableHandlers.
